# loc2_ws

./: README.md  frames_2025-09-19_15.17.22.gv  frames_2025-11-22_17.29.29.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/loc_bridge/lib/loc_bridge/: camimu_node  ekf_switch_node  odom_csv_logger  plan_csv_logger  rpm_to_odom  s_fusion_node  yaw_to_imu
install/loc_bridge/share/loc_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
logs/: PID_Kp=0.1.csv  PID_Kp=0.1_2.csv  ナビゲーション成功.csv  良データ_0117.csv
src/loc_bridge/: package.xml  setup.cfg  setup.py
src/loc_bridge/config/: ekf_camimu.yaml
src/loc_bridge/launch/: loc_stack_camimu.launch.py
src/loc_bridge/loc_bridge/: camimu_node.py  ekf_switch_node.py  odom_csv_logger.py  plan_csv_logger.py  rpm_to_odom_node.py  s_fusion_node.py  yaw_to_imu_node.py
