<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loc_bridge</name>
  <version>0.0.0</version>
  <description>Localization bridge nodes and EKF launch</description>
  <maintainer email="kanata20011004@gmail.com">maffin21</maintainer>
  <license>MIT</license>

  <!-- runtime / build toolchain -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- python nodes / msgs -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- launch で get_package_share_directory を使う -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- launch から外部ノードを起動する -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <!-- tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

